# Portal-OpenGL-GameEngine

./: CMakeLists.txt  imgui.ini
Scene/: Scene.json
game/include/: Companion.h  Component.h  GameObject.h  Gun.h  Map.h  Music.h  Platform.h  Player.h  Portals.h  Singleton.h  Turret.h  UIManager.h  imgui_app.h
game/include/Bullet/: BoxRigidBody.h  CapsuleRigidBody.h  CustomMotionState.h  DebugDrawer.h  RigidBody.h  SphereRigidBody.h  WorldPhysicsComponents.h
game/src/: Companion.cpp  GameObject.cpp  GameObject.cpp~RF6fc9962c.TMP  GameObject.cpp~RF91c59ca7.TMP  Gun.cpp  Main.cpp  Map.cpp  Music.cpp  Platform.cpp  Player.cpp  Portals.cpp  Singleton.cpp  Turret.cpp  UIManager.cpp  imgui_app.cpp
game/src/Bullet/: BoxRigidBody.cpp  CapsuleRigidBody.cpp  CustomMotionState.cpp  DebugDrawer.cpp  RigidBody.cpp  SphereRigidBody.cpp  WorldPhysicsComponents.cpp
